Use installed JavaFX version with compatible architecture and matching jmods